chrome strageの書き込みまでできた

--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,9 @@
         "activeTab",
         "scripting",
         "tabs",
-        "windows"
+        "windows",
+        "storage",
+        "unlimitedStorage"
     ],
     "action": {
         "default_popup": "popup.html"
