--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "time-tracker",
+    "name": "tab-tracker",
     "description": "",
     "version": "1.0",
     "manifest_version": 3,
