--- a/manifest.json
+++ b/manifest.json
@@ -27,5 +27,10 @@
                 "<all_urls>"
             ]
         }
-    ]
+    ],
+    "icons": {
+        "16": "icons/icon16.png",
+        "48": "icons/icon48.png",
+        "128": "icons/icon128.png"
+    }
 }
